--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Ignored files
+*.csv
+.DS_Store
+.idea
+result/stage_2_result/MLP_prediction_result_None
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
